--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "hardhat": "^2.6.3"
   },
   "dependencies": {
-    "dotenv": "10.0.0",
-    "ethers": "5.4.6",
     "@nomiclabs/hardhat-ethers": "2.0.2",
-    "@nomiclabs/hardhat-etherscan": "2.1.6"
-
+    "@nomiclabs/hardhat-etherscan": "2.1.6",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "4.3.4",
+    "dotenv": "10.0.0",
+    "ethers": "5.4.6"
   },
   "scripts": {
     "compile": "hardhat compile"
